fixed layout issues for mobile

--- a/src/app/frontend-mentor-tasks/launch-countdown-timer/countdown-timer/countdown-timer.component.scss
+++ b/src/app/frontend-mentor-tasks/launch-countdown-timer/countdown-timer/countdown-timer.component.scss
@@ -1,6 +1,7 @@
 .countdown-timer-container {
-    display: flex;
-    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 5px;
     .time-container {
         display: flex;
         flex-direction: column;
