--- a/src/app/frontend-mentor-tasks/launch-countdown-timer/launch-countdown-timer.component.scss
+++ b/src/app/frontend-mentor-tasks/launch-countdown-timer/launch-countdown-timer.component.scss
@@ -50,6 +50,7 @@
             h1 {
                 margin: 0;
                 color: white;
+                font-size: 24px;
             }
         }
         .social-media-contact-container {
