--- a/src/app/home/project-card/project-card.component.scss
+++ b/src/app/home/project-card/project-card.component.scss
@@ -7,11 +7,12 @@
     -moz-box-shadow: 1px 4px 14px -3px rgba(0,0,0,0.4);
     .imageContainer {
         width: 100px;
-        height: 100px;
+        min-height: 100px;
         min-width: 100px;
         img {
             width: 100%;
-            height: 100%;
+            height: 100%;            
+            object-fit: cover;
         }
     }
     .projectCardDetails {
